--- a/HackwichThree/Base.lproj/Main.storyboard
+++ b/HackwichThree/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Xqt-KV-uJZ">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,7 +15,7 @@
             <objects>
                 <viewController id="nIS-7K-lUi" customClass="viewControllerTwoViewController" customModule="HackwichThree" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ARN-g7-1pk">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="miP-Lq-Eo6">
@@ -35,33 +35,94 @@
             </objects>
             <point key="canvasLocation" x="449" y="433"/>
         </scene>
-        <!--View Controller-->
+        <!--About Me-->
         <scene sceneID="6dc-v7-fvy">
             <objects>
                 <viewController id="6dh-d7-QBy" customClass="ViewController" customModule="HackwichThree" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="HRw-MF-k7F">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cft-f0-naR">
-                                <rect key="frame" x="144" y="237" width="86" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cft-f0-naR">
+                                <rect key="frame" x="36" y="247" width="104" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <attributedString key="attributedText">
+                                    <fragment content="Label">
+                                        <attributes>
+                                            <font key="NSFont" metaFont="system" size="17"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="self portrait" translatesAutoresizingMaskIntoConstraints="NO" id="RqX-5J-i3w">
+                                <rect key="frame" x="27" y="66" width="113" height="179"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="uhwo logo" translatesAutoresizingMaskIntoConstraints="NO" id="ewM-7R-y3p">
+                                <rect key="frame" x="189" y="86" width="115" height="139"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qms-Iq-3hg">
+                                <rect key="frame" x="36" y="276" width="104" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <attributedString key="attributedText">
+                                    <fragment content="Label">
+                                        <attributes>
+                                            <font key="NSFont" metaFont="system" size="17"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5MT-IF-TsZ">
+                                <rect key="frame" x="153" y="281" width="167" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DYz-tB-5mp">
+                                <rect key="frame" x="153" y="247" width="151" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gde-Vi-pce">
+                                <rect key="frame" x="36" y="336" width="240" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ZmW-QQ-Qfy">
+                                <rect key="frame" x="36" y="372" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="z7F-ZK-tVg"/>
                     </view>
-                    <navigationItem key="navigationItem" id="3sR-Zg-d38"/>
+                    <navigationItem key="navigationItem" title="About Me" id="3sR-Zg-d38"/>
                     <connections>
+                        <outlet property="fifthLabel" destination="gde-Vi-pce" id="nDJ-1q-HlM"/>
                         <outlet property="firstLabel" destination="Cft-f0-naR" id="MTK-w3-TbG"/>
+                        <outlet property="fourthLabel" destination="5MT-IF-TsZ" id="wVH-MF-ZaT"/>
+                        <outlet property="secondLabel" destination="qms-Iq-3hg" id="wa9-AF-dpU"/>
+                        <outlet property="textViewLabel" destination="ZmW-QQ-Qfy" id="ZEJ-vM-S5z"/>
+                        <outlet property="thirdLabel" destination="DYz-tB-5mp" id="PeD-3s-xFH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yf4-Am-29c" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="448.80000000000001" y="-233.43328335832086"/>
+            <point key="canvasLocation" x="448.125" y="-233.45070422535213"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="7xU-xR-Lzj">
@@ -75,20 +136,21 @@
                     <connections>
                         <segue destination="W7X-a6-IKV" kind="relationship" relationship="viewControllers" id="15X-M1-VRx"/>
                         <segue destination="l5J-V8-Fj9" kind="relationship" relationship="viewControllers" id="6St-hw-hgg"/>
+                        <segue destination="JRK-zp-xTp" kind="relationship" relationship="viewControllers" id="qKc-k3-qza"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ogP-FX-HqV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1078" y="100"/>
         </scene>
-        <!--Item 1-->
+        <!--About Me-->
         <scene sceneID="7Km-nm-PVw">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="W7X-a6-IKV" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item 1" image="about" selectedImage="about" id="uXe-ZQ-Lxs"/>
+                    <tabBarItem key="tabBarItem" title="About Me" image="about" selectedImage="about" id="uXe-ZQ-Lxs"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="HPk-9p-ihW">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -100,14 +162,14 @@
             </objects>
             <point key="canvasLocation" x="-244" y="-233"/>
         </scene>
-        <!--Item 2-->
+        <!--Weather-->
         <scene sceneID="Pjl-SX-1ad">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="l5J-V8-Fj9" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item 2" id="cVw-Ch-NeC"/>
+                    <tabBarItem key="tabBarItem" title="Weather" image="sun" selectedImage="sun" id="cVw-Ch-NeC"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="vcm-VV-cbD">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -119,8 +181,47 @@
             </objects>
             <point key="canvasLocation" x="-244.80000000000001" y="433.58320839580216"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="kt6-Pe-SwM">
+            <objects>
+                <viewController id="06B-Ac-CGR" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="BuD-bU-XoW">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="gwx-qx-7Ph"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="G6D-fh-7i0"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xTC-ab-HsL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="449" y="1154"/>
+        </scene>
+        <!--Bucket List-->
+        <scene sceneID="13z-XZ-G0O">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="JRK-zp-xTp" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Bucket List" image="list" selectedImage="list" id="8ev-id-IjC"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="nqp-x7-Wwz">
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="06B-Ac-CGR" kind="relationship" relationship="rootViewController" id="IPY-YN-ZXH"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="f4q-oF-gp4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-244.80000000000001" y="1154.1229385307347"/>
+        </scene>
     </scenes>
     <resources>
         <image name="about" width="30" height="30"/>
+        <image name="list" width="30" height="30"/>
+        <image name="self portrait" width="384" height="477"/>
+        <image name="sun" width="30" height="30"/>
+        <image name="uhwo logo" width="783" height="874"/>
     </resources>
 </document>
