--- a/HackwichThree/Base.lproj/Main.storyboard
+++ b/HackwichThree/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller Two View Controller-->
+        <!--Weather Converter-->
         <scene sceneID="nnA-xe-cFx">
             <objects>
                 <viewController id="nIS-7K-lUi" customClass="viewControllerTwoViewController" customModule="HackwichThree" customModuleProvider="target" sceneMemberID="viewController">
@@ -29,7 +29,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="Yhh-jr-nQ5"/>
                     </view>
-                    <navigationItem key="navigationItem" id="81z-cY-qUO"/>
+                    <navigationItem key="navigationItem" title="Weather Converter" id="81z-cY-qUO"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Lv7-t9-9OP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
